Started working on -r, added RequestHandlerTest file